# Portafolio

./: .gitignore  BDD.dm2  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  estilos.css  estructura.txt  guia-commits.md  guia-commits.txt  index.html  info.php  portafolio.txt
ArchivosSubidos/: hola.txt
Empresa Iniciativa Emprendedora/componentes/: footer.html  header.html
Empresa Iniciativa Emprendedora/scripts/: cargarComponentes.js
Quest Software/: MER-Aeropuerto.dm2  MER-BIBLIOTECA-SCRIPT.sql
TerceraEvaluacion/Practica Nº2 - Agencia de viajes/: MER_03_AGENCIA-VIAJES_SOLUCION.DM2
TerceraEvaluacion/Practica Nº3 - Cadena de pizzerias/: MER_02_MarquezPiña_AgustinAntonio.dm2
TerceraEvaluacion/Segunda Practica - Agencia de Viajes/: MER_03_AGENCIA-VIAJES_SOLUCION.~M2
U1/17-09-24_PrimerasClases/: primerEjercicioPHP.php
U1/18-09-24_EjerciciosPHPW3Schools/: ejercicio5.php
U1/primerasClases/: miPrimerPHP.php  segundoEjercicioPHP.php
U2/01-10-24_Tarea2_10Ficheros/: informacion.txt
U2/25-09-24_Tarea2_2Potencias/: MarquezPina_AgustinAntonio_Tarea2_2.php
U2/29-09-24_Tarea2_6Clases/: MarquezPina_AgustinAntonio_Tarea2_6.php
U3/01-10-24_Clase_Ejemplo_Formulario/: EjemploFormularioLogin.html
U3/10-10-24_LoginPHP_Tarea3_4/: bienvenido.html  formularioDeCarlosDeEjemplo.php
U3/10-18-24_Tarea3_8/: MarqurezPina_AgustinAntonio_Tarea3_8.php
proyectos-personales/practicas-universitarias-uax-c/: CMakeLists.txt  main.c
proyectos-personales/practicas-universitarias-uax-c/GestionSuperMercado/: GestionSuperMercado.c  main.c  ventas.c
(+1853 files in other folders)
